# agentic-api

./: README.md  SCRAPING_PIPELINE_DETAILED.md  main.py  pyproject.toml
app/: main.py
app/models/: admin.py  chat.py
app/routers/: admin.py  chat.py  dashboard.py  profiles.py
app/scrapers/: inference_scrape.py  lattes_scrape.py  normalize_inferences.py  pipeline_scrape.py  scholar_scrape.py  simple_scrape.py
app/services/: chat_service.py  chat_storage_service.py  dashboard_service.py  openai_vector_store_service.py  pipeline_admin_service.py  profile_service.py  search_corpus_service.py
docs/: api-routes.md  dataset-contract.md  scraping-decisions.md  scraping.md
scrape_results/: current.json
scrape_results/20260526_142720/: page.html  summary.json  table_2.csv  tables.json
scrape_results/20260526_143120/: table_3.csv
scrape_results/20260526_210837/: scholarships.csv  scholarships.json  summary.json  table_1.csv  table_4.csv  table_5.csv  table_6.csv  text.txt
scrape_results/inferences/20260527_174328/: inference_llm.json  inference_review_queue.csv  normalization_log.json  profiles_with_inferences.csv  summary.json
scrape_results/lattes/20260526_143522/: search_form.html  search_form_controls.json
scrape_results/lattes/20260526_143653/: search_result.html  search_result.txt  summary.json
scrape_results/lattes/20260526_143717/: candidates.json  search_result.html  search_result.txt  summary.json
scrape_results/search/: profiles_search_corpus.json  profiles_search_corpus_metadata.json  vector_store.json
(+5861 files in other folders)
