[project]
name = "agentic-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]
